header and hero edit

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     <body>
         <div class="hero">
             <div class="header">
-                <div>Header Logo</div>
-                <div class="header-links">
-                    <ul>
+                <div class="header-logo">Header Logo</div>
+                <ul class="header-links">
                         <li>header link one</li>
                         <li>header link two</li>
                         <li>header link three</li>
-                    </ul>
+                </ul>
+                
+            </div>
+            <div class="hero-main">
+                <div class="hero-main-text">
+                    <div class="hero-main-text-title">This website is awesome</div>
+                    <div class="hero-main-text-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button class="hero-main-text-button">Sign up</button>
+                </div>
+                <div class="hero-main-image">
+                    <img src="">
                 </div>
             </div>
         </div>
