--- a/index.html
+++ b/index.html
@@ -25,8 +25,46 @@
                 </div>
                 <div class="hero-main-image">
                     <img src="">
+                    <p>image goes here</p>
                 </div>
             </div>
         </div>
+
+        <div class="info">
+            <div class="info-header">Some random information.</div>
+            <ul class="info-list">
+                <li>
+                    <div class="info-list-image"><img src=""></div>
+                    <div class="info-list-subtext">this is some subtext under an illustration or image</div>
+                </li>
+                <li>
+                    <div class="info-list-image"><img src=""></div>
+                    <div class="info-list-subtext">this is some subtext under an illustration or image</div>
+                </li>
+                <li>
+                    <div class="info-list-image"><img src=""></div>
+                    <div class="info-list-subtext">this is some subtext under an illustration or image</div>
+                </li>
+                <li>
+                    <div class="info-list-image"><img src=""></div>
+                    <div class="info-list-subtext">this is some subtext under an illustration or image</div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="quote">
+            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-name">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="action">
+            <div class="action-textcont">
+                <div class="action-header">Call to action! It's time!</div>
+                <div class="action-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
+
+        <div class="footer">Copyright © AnotherJaggens 2022</div>
     </body>
 </html>
